tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportWithExport.errors.txt
tests/cases/compiler/client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(2,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(4,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(6,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(9,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(11,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    export var a = 10;
    export var x = a;
    export var m = a;
    export default {};
    
==== tests/cases/compiler/client.ts (6 errors) ====
    export import defaultBinding1, { } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export import defaultBinding2, { a } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = a;
    export import defaultBinding3, { a as b } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = b;
    export import defaultBinding4, { x, a as y } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = x;
    export var x1: number = y;
    export import defaultBinding5, { x as z,  } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = z;
    export import defaultBinding6, { m,  } from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x1: number = m;
    